--- a/.github/workflows/snyk-oss-summary.yml
+++ b/.github/workflows/snyk-oss-summary.yml
@@ -32,6 +32,7 @@ jobs:
           const fs = require('fs');
           const data = JSON.parse(fs.readFileSync('snyk-oss-results.json', 'utf8'));
           const severityRank = s => ({critical:4, high:3, medium:2, low:1}[s] || 0);
+          const severityIcons = { critical: '🔴', high: '🟠', medium: '🟡', low: '🟢' };
           const manifestGroups = {};
 
           const projects = Array.isArray(data) ? data : [data];
@@ -56,7 +57,8 @@ jobs:
             output += `|----------|---------|-------|----------------|\n`;
             for (const v of vulns.slice(0, 25)) {
               const fix = v.fixedIn?.[0] || 'N/A';
-              output += `| ${v.severity.toUpperCase()} | ${v.packageName}@${v.version} | ${v.title} | ${fix} |\n`;
+              const icon = severityIcons[v.severity] || '';
+              output += `| ${icon} ${v.severity.toUpperCase()} | ${v.packageName}@${v.version} | ${v.title} | ${fix} |\n`;
             }
             output += '\n';
           }
