--- a/.github/workflows/snyk-oss-summary.yml
+++ b/.github/workflows/snyk-oss-summary.yml
@@ -74,20 +74,15 @@ jobs:
       - name: Add summary to PR Checks tab
         run: cat pr-comment.md >> $GITHUB_STEP_SUMMARY
 
-      - name: Delete existing Snyk comment (if exists)
+      - name: Edit or create Snyk PR comment
         if: github.event_name == 'pull_request'
         run: |
-          COMMENT_ID=$(gh pr view "$PR_URL" --json comments -q '.comments[] | select(.body | contains("<!-- SNYK_OSS_SUMMARY -->")) | .databaseId')
+          COMMENT_ID=$(gh pr view "$PR_URL" --json comments -q '.comments[] | select(.body | contains("<!-- SNYK_OSS_SUMMARY -->")) | .id')
           if [ -n "$COMMENT_ID" ]; then
-            gh api repos/${{ github.repository }}/issues/comments/$COMMENT_ID -X DELETE -H "Authorization: token $GITHUB_TOKEN"
+            gh pr comment "$PR_URL" --edit-last --body-file pr-comment.md
+          else
+            gh pr comment "$PR_URL" --body-file pr-comment.md
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
-
-      - name: Post comment to PR
-        if: github.event_name == 'pull_request'
-        run: gh pr comment "$PR_URL" --body-file pr-comment.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
