--- a/.github/workflows/snyk-oss-summary.yml
+++ b/.github/workflows/snyk-oss-summary.yml
@@ -31,7 +31,7 @@ jobs:
           const fs = require('fs');
           const data = JSON.parse(fs.readFileSync('snyk-oss-results.json', 'utf8'));
           const severityRank = s => ({critical:4, high:3, medium:2, low:1}[s] || 0);
-          const severityIcons = { critical: '🔴', high: '🟠', medium: '🟡', low: '🟢' };
+          const severityIcons = { critical: '🔴', high: '🟠' };
           const manifestGroups = {};
 
           const projects = Array.isArray(data) ? data : [data];
@@ -39,6 +39,7 @@ jobs:
           for (const project of projects) {
             const manifest = project.displayTargetFile || project.targetFile || project.projectName || 'unknown';
             for (const vuln of project.vulnerabilities || []) {
+              if (!['critical', 'high'].includes(vuln.severity)) continue;
               const key = `${vuln.packageName}@${vuln.version}-${vuln.title}`;
               manifestGroups[manifest] = manifestGroups[manifest] || new Map();
               manifestGroups[manifest].set(key, vuln);
@@ -53,13 +54,18 @@ jobs:
               .sort((a, b) => severityRank(b.severity) - severityRank(a.severity));
 
             const pkgCount = new Map();
+            let criticalCount = 0;
+            let highCount = 0;
+
             for (const v of vulns) {
               const name = `${v.packageName}@${v.version}`;
               pkgCount.set(name, (pkgCount.get(name) || 0) + 1);
+              if (v.severity === 'critical') criticalCount++;
+              else if (v.severity === 'high') highCount++;
             }
 
             output += `### 📦 ${file}  \n`;
-            output += `**${vulns.length} unique vulnerabilities across ${pkgCount.size} packages**\n\n`;
+            output += `**${criticalCount} critical and ${highCount} high vulnerabilities across ${pkgCount.size} packages**\n\n`;
             output += `| Severity | Package | Vulns | Title | Fix Available | Advisor |\n`;
             output += `|----------|---------|--------|-------|----------------|---------|\n`;
 
@@ -80,7 +86,7 @@ jobs:
           }
 
           if (output.trim().length < 50) {
-            output += '_No vulnerabilities found._\n';
+            output += '_No critical or high vulnerabilities found._\n';
           }
 
           fs.writeFileSync('pr-comment.md', output);
