--- a/.github/workflows/snyk-oss-summary.yml
+++ b/.github/workflows/snyk-oss-summary.yml
@@ -40,9 +40,8 @@ jobs:
             const manifest = project.displayTargetFile || project.targetFile || project.projectName || 'unknown';
             for (const vuln of project.vulnerabilities || []) {
               if (!['critical', 'high'].includes(vuln.severity)) continue;
-              const key = `${vuln.packageName}@${vuln.version}-${vuln.title}`;
-              manifestGroups[manifest] = manifestGroups[manifest] || new Map();
-              manifestGroups[manifest].set(key, vuln);
+              manifestGroups[manifest] = manifestGroups[manifest] || [];
+              manifestGroups[manifest].push(vuln);
             }
           }
 
@@ -50,41 +49,36 @@ jobs:
           output += '## 🔐 Snyk OSS Vulnerabilities by Manifest\n\n';
 
           for (const file in manifestGroups) {
-            const vulns = Array.from(manifestGroups[file].values())
-              .sort((a, b) => severityRank(b.severity) - severityRank(a.severity));
+            const vulns = manifestGroups[file].sort((a, b) => severityRank(b.severity) - severityRank(a.severity));
 
-            const pkgCount = new Map();
+            const packageVulnMap = new Map();
             let criticalCount = 0;
             let highCount = 0;
 
-            const seen = new Set();
             for (const v of vulns) {
-              const name = `${v.packageName}@${v.version}`;
-              pkgCount.set(name, (pkgCount.get(name) || 0) + 1);
-              const uniqueKey = `${v.severity}-${v.packageName}@${v.version}-${v.title}`;
-              if (seen.has(uniqueKey)) continue;
-              seen.add(uniqueKey);
+              const key = `${v.packageName}@${v.version}`;
+              const count = packageVulnMap.get(key)?.count || 0;
+              packageVulnMap.set(key, {
+                ...v,
+                count: count + 1,
+              });
+
               if (v.severity === 'critical') criticalCount++;
-              else if (v.severity === 'high') highCount++;
+              if (v.severity === 'high') highCount++;
             }
 
             output += `### 📦 ${file}  \n`;
-            output += `**🔴 ${criticalCount} critical vulnerabilities** and **🟠 ${highCount} high vulnerabilities** across **${pkgCount.size} packages**.\n\n`;
+            output += `**🔴 ${criticalCount} critical vulnerabilities** and **🟠 ${highCount} high vulnerabilities** across **${packageVulnMap.size} packages**.\n\n`;
             output += `| Severity | Package | Vulns | Title | Fix Available | Advisor |\n`;
             output += `|----------|---------|--------|-------|----------------|---------|\n`;
 
-            let shown = new Set();
-            for (const v of vulns) {
-              const key = `${v.packageName}@${v.version}`;
-              if (shown.has(key)) continue;
-              shown.add(key);
-              const count = pkgCount.get(key);
+            for (const [key, v] of packageVulnMap.entries()) {
               const icon = severityIcons[v.severity] || '';
               const snykUrl = v.id ? `https://security.snyk.io/vuln/${v.id}` : '';
               const pkgUrl = `https://www.npmjs.com/package/${v.packageName}/v/${v.version}`;
               const advisorUrl = `https://snyk.io/advisor/npm-package/${v.packageName}`;
               const fix = v.fixedIn?.[0] || 'N/A';
-              output += `| ${icon} ${v.severity.toUpperCase()} | [${v.packageName}@${v.version}](${pkgUrl}) | ${count} | [${v.title}](${snykUrl}) | ${fix} | [View](${advisorUrl}) |\n`;
+              output += `| ${icon} ${v.severity.toUpperCase()} | [${v.packageName}@${v.version}](${pkgUrl}) | ${v.count} | [${v.title}](${snykUrl}) | ${fix} | [View](${advisorUrl}) |\n`;
             }
             output += '\n';
           }
