--- a/.github/workflows/snyk-oss-summary.yml
+++ b/.github/workflows/snyk-oss-summary.yml
@@ -52,33 +52,36 @@ jobs:
             const vulns = manifestGroups[file].sort((a, b) => severityRank(b.severity) - severityRank(a.severity));
 
             const packageVulnMap = new Map();
-            let criticalCount = 0;
-            let highCount = 0;
+            let totalCritical = 0;
+            let totalHigh = 0;
+            let vulnCount = 0;
 
             for (const v of vulns) {
               const key = `${v.packageName}@${v.version}`;
-              const existing = packageVulnMap.get(key) || { count: 0, vuln: v, vulnTitles: new Set() };
+              const existing = packageVulnMap.get(key) || { count: 0, vuln: v, vulnTitles: new Set(), severity: v.severity };
               existing.count++;
               existing.vulnTitles.add(v.title);
+              existing.severity = v.severity;
               packageVulnMap.set(key, existing);
 
-              if (v.severity === 'critical') criticalCount++;
-              if (v.severity === 'high') highCount++;
+              if (v.severity === 'critical') totalCritical++;
+              if (v.severity === 'high') totalHigh++;
+              vulnCount++;
             }
 
             output += `### 📦 ${file}  \n`;
-            output += `**🔴 ${criticalCount} critical vulnerabilities** and **🟠 ${highCount} high vulnerabilities** across **${packageVulnMap.size} packages**.\n\n`;
+            output += `🔴 ${totalCritical} critical vulnerabilities and 🟠 ${totalHigh} high vulnerabilities across ${packageVulnMap.size} packages (total ${vulnCount} issues).\n\n`;
             output += `| Severity | Package | Vulns | Title | Fix Available | Advisor |\n`;
             output += `|----------|---------|--------|-------|----------------|---------|\n`;
 
-            for (const [key, { vuln, count, vulnTitles }] of packageVulnMap.entries()) {
-              const icon = severityIcons[vuln.severity] || '';
+            for (const [key, { vuln, count, vulnTitles, severity }] of packageVulnMap.entries()) {
+              const icon = severityIcons[severity] || '';
               const snykUrl = vuln.id ? `https://security.snyk.io/vuln/${vuln.id}` : '';
               const pkgUrl = `https://www.npmjs.com/package/${vuln.packageName}/v/${vuln.version}`;
               const advisorUrl = `https://security.snyk.io/package/npm/${vuln.packageName}/${vuln.version}`;
               const fix = vuln.fixedIn?.[0] || 'N/A';
               const vulnTitle = [...vulnTitles][0];
-              output += `| ${icon} ${vuln.severity.toUpperCase()} | [${vuln.packageName}@${vuln.version}](${pkgUrl}) | ${count} | [${vulnTitle}](${snykUrl}) | ${fix} | [View](${advisorUrl}) |\n`;
+              output += `| ${icon} ${severity.toUpperCase()} | [${vuln.packageName}@${vuln.version}](${pkgUrl}) | ${count} | [${vulnTitle}](${snykUrl}) | ${fix} | [View](${advisorUrl}) |\n`;
             }
             output += '\n';
           }
